syntax = "proto3";

package io.lionweb.lioncore.protobuf;

option java_multiple_files = true;
option java_package = "io.lionweb.lioncore.protobuf";
option java_outer_classname = "ChunkProtos";

message BulkImport {
  repeated MetaPointer metaPointerDefs = 1;
  repeated BulkImportElement elements = 2;
}

message BulkImportElement {
  string container = 1;
  int32 metaPointerIndex = 2;
  repeated Node tree = 3;
}

message Chunk {
  string serializationFormatVersion = 1;
  // We use this mechanism both to save space and to represent nulls (identified by -1)
  repeated string stringValues = 2;
  repeated MetaPointer metaPointers= 3;
  repeated Language languages = 4;
  repeated Node nodes = 5;

}

/*message MetaPointerDef {
  int32 language = 1;
  int32 version = 2;
  int32 key = 3;
}*/

message Language {
  int32 key = 1;
  int32 version = 2;
}

message Node {
  int32 id = 1;
  int32 classifier = 2;
  repeated Property properties = 3;
  repeated Containment containments = 4;
  repeated Reference references = 5;
  repeated Annotation annotations = 6;
  /*optinal*/ int32 parent = 7;
}

/*message Classifier {
  string language = 1;
  string version = 2;
  string key = 3;
}*/

message MetaPointer {
  int32 language = 1;
  int32 version = 2;
  int32 key = 3;
}

message Property {
  // MetaPointer metapointer = 1;
  int32 metaPointerIndex = 1;
  /*optional*/ int32 value = 2;
}

message Containment {
  //MetaPointer metapointer = 1;
  int32 metaPointerIndex = 1;
  repeated int32 children = 2;
}

message Reference {
  //MetaPointer metapointer = 1;
  int32 metaPointerIndex = 1;
  repeated ReferenceValue values = 2;
}

message Annotation {

}

message ReferenceValue {
  /*optional*/ int32 resolveInfo = 1;
  /*optional*/ int32 referred = 2;
}
